trunk/Archive2/2d/309927ed974d7d/output
main.cpp:14:33: error: no member named 'cout' in namespace 'std'
    for(auto const& e : p) std::cout << e << ", ";
                           ~~~~~^
1 error generated.
